# 2D_DVM_microflows

./: .gitignore  README.md  contributors.txt
results/: DVM_grvy.inp
software/code_versions/NvNJ_internal_energy/: AUTHORS  Makefile.am  configure.ac
software/code_versions/NvNJ_internal_energy/build-aux/common/.svn/: all-wcprops  entries
software/code_versions/NvNJ_internal_energy/input_files/: DVM_grvy.inp
software/code_versions/NvNJ_internal_energy/m4/: config_summary.m4
software/code_versions/NvNJ_internal_energy/m4/common/: ax_fc_minopt.m4  glpk.m4  pecos_ablation_new.m4  queso_new.m4
software/code_versions/NvNJ_internal_energy/src/: Makefile.am  main.f90
software/code_versions/NvNJ_internal_energy/src/collisions/: collision_integral.f90  collision_utilities.f90  collision_utilities.f90.backup  full_mc.f90  remapping.f90  replenishing_collisions.f90  variance_reduction.f90
software/code_versions/NvNJ_internal_energy/src/common/lic_utils/.svn/: all-wcprops  entries
software/code_versions/NvNJ_internal_energy/src/conditions/: boundary_conditions.f90  initial_conditions.f90  shock_conditions.f90
software/code_versions/NvNJ_internal_energy/src/convection/: convection.f90
software/code_versions/NvNJ_internal_energy/src/dist_funcs/: dist_func.f90  physical_props.f90
software/code_versions/NvNJ_internal_energy/src/grid/: physical_grid.f90  velocity_grid.f90
software/code_versions/NvNJ_internal_energy/src/input_output/: read_input.f90  restart.f90  screen_output.f90  species_data.f90  visualization.f90
software/code_versions/NvNJ_internal_energy/src/solver/: dvm_solver.f90  scaling.f90  time_stepping.f90
software/code_versions/NvNJ_internal_energy/src/utils/: constants.f90  error_check.f90  math_utils.f90  random_number_generation.f90  sort_and_search.f90
software/code_versions/NvNJ_internal_energy/test/: bkw_relax.sh  coll_post_coll_vel_test.f90  coll_rel_vel_test.f90  df_bkw_test.f90  dist_func_prompt.sh  ecoll_pick_level_test.f90  ecoll_rot_level_test.f90  interp_y_test.f90  interp_yz_test.f90  interp_z_test.f90  maxwell_relax.sh  props_Z_rot_test.f90  props_dens_test.f90  props_vib_energy_test.f90  props_y_vel_test.f90  props_z_vel_test.f90
software/code_versions/NvNJ_internal_energy/test/input_files/: bkw_relax.inp
software/code_versions/grid_ref_code/: LICENSE
software/code_versions/grid_ref_code/input_files/: DVM_grvy.inp
software/code_versions/grid_ref_code/m4/: config_summary.m4
software/code_versions/grid_ref_code/src/: Makefile.am
software/code_versions/grid_ref_code/src/c_files/: curve_fit.c  get_gsl_rng_default.c  lnfit.c  temp_rot_fit.c  temp_vib_fit.c
software/code_versions/grid_ref_code/src/collisions/: collision_integral.f90  collision_utilities.f90  full_mc.f90  full_mc.f90.backup  remapping.f90  replenishing_collisions.f90  replenishing_collisions.f90.backup  variance_reduction.f90
software/code_versions/grid_ref_code/src/common/lic_utils/: update_license.pl
software/code_versions/grid_ref_code/src/common/lic_utils/.svn/text-base/: update_license.pl.svn-base
software/code_versions/grid_ref_code/src/conditions/: boundary_conditions.f90  initial_conditions.f90  shock_conditions.f90
software/code_versions/grid_ref_code/src/convection/: convection.f90
software/code_versions/grid_ref_code/src/dist_funcs/: dist_func.f90  physical_props.f90
software/code_versions/grid_ref_code/src/grid/: physical_grid.f90  velocity_grid.f90
software/code_versions/grid_ref_code/src/input_output/: read_input.f90  restart.f90  screen_output.f90  species_data.f90  visualization.f90
software/code_versions/grid_ref_code/src/solver/: dvm_solver.f90
software/code_versions/grid_ref_code/src/utils/: constants.f90  math_utils.f90  sort_and_search.f90
software/code_versions/grid_ref_code/test/: bkw_relax_test.f90  df_vib_boltz_test.f90  ecoll_split_depl_test.f90  ecoll_vib_level_test.f90  interp_xy_test.f90  interp_xyz_test.f90  interp_xz_test.f90  interpolation_prompt.sh  properties_prompt.sh  props_Z_vib_test.f90  props_rot_dof_test.f90  props_rot_energy_test.f90  props_tr_energy_test.f90  props_tr_temp_test.f90  props_vib_dof_test.f90  props_vib_temp_test.f90  props_x_vel_test.f90
software/dsmc/: DS1_base.f90  README  data_file_description
software/libraries/: buildgrvy.sh
software/shock_calculator/: normal_shock.f90  normal_shock_parameters.txt
software/test_codes/collision_energy_df/: Et_comparison.lay  collision_energy_df.f90  continuous_df.lay  discrete_df.lay  temperature_data.ods
software/trunk/: CHANGES  README  configure.ac
software/trunk/input_files/: DVM_grvy.inp
software/trunk/m4/common/: ax_pkg_swig.m4  grvy_new.m4  pecos_ablation.m4
software/trunk/src/: '  Makefile.am  main.f90  old_code.f90
software/trunk/src/c_files/: polyfit.c  rotfit.c
software/trunk/src/collisions/: collision_integral.f90  collision_utilities.f90  full_mc.f90  inelastic.f90  remapping.f90  replenishing_collisions.f90  scratch_paper.f90  variance_reduction.f90  variance_reduction.f90.backup  variance_reduction.f90.backup2
software/trunk/src/conditions/: boundary_conditions.f90  initial_conditions.f90  old_boundary_conditions.f90  shock_conditions.f90  tmp_boundary_conditions.f90
software/trunk/src/convection/: convection.f90
software/trunk/src/dist_funcs/: dist_func.f90  physical_props.f90
software/trunk/src/grid/: physical_grid.f90  velocity_grid.f90
software/trunk/src/input_output/: command_line.f90  grvy.f90  input.f90  read_input.f90  read_input_2D.f90  (+6 more)
software/trunk/test/: Makefile.am  coll_com_vel_test.f90  coll_num_coll_pairs_test.f90  coll_rand_partner_test.f90  coll_rand_vel_on_sphere_test.f90  collision_prompt.sh  df_maxwell_test.f90  df_rot_boltz_test.f90  ecoll_efrac_array_test.f90  ecoll_g_prime_test.f90  ecoll_rot_vib_level_test.f90  energy_collision_prompt.sh  finalize.sh  in_out.sh  in_out_test.f90  input_prompt.sh  input_read_vel_grid_test.f90  interp_x_test.f90  maxwell_relax_test.f90  props_energy_test.f90  props_rot_temp_test.f90  props_temp_test.f90
software/trunk/test/input_files/: maxwell_relax.inp
(+22 files in other folders)
